# TrafficAccidentForecasting

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements_tensorflow_rnn_lstm.txt  requirements_updated.txt  run.sh  setup.py  test.py
Datasets_visualization/Visualization/html/: Monthly_data  Monthly_data.html  daily_data  daily_data.html  temp  weekly_data  weekly_data.html
Datasets_visualization/Visualization/image/: Monthly_data  daily_data  temp  weekly_data
Models/ARIMAModel/: ARIMA.py  evaluation.py  plot.py  preprocessing.py  test.py
Models/RNNLSTMModel/: RNNLSTMMODEL.py  evaluation.py  plot.py  preprocessing.py
Models/RNNLSTMTensorFlow/: Model.py  evaluation.py  inference.py  plot.py  preprocessing.py
Models/XGBOOST/: XGBBOOSTModel.py  plot.py  xgb_evaluation.py
Plots/RNNLSTMModel/Results/: forecasting_using_RNNLSTM_combination_input_window_120_output_window_328.html  forecasting_using_RNNLSTM_combination_input_window_150_output_window_298.html  forecasting_using_RNNLSTM_combination_input_window_180_output_window_268.html  forecasting_using_RNNLSTM_combination_input_window_240_output_window_208.html  forecasting_using_RNNLSTM_combination_input_window_300_output_window_148.html  forecasting_using_RNNLSTM_combination_input_window_30_output_window_418.html  forecasting_using_RNNLSTM_combination_input_window_60_output_window_388.html  forecasting_using_RNNLSTM_combination_input_window_90_output_window_358.html
Plots_tensor/RNNLSTMModel/Results/: forecasting_using_RNNLSTM_combination_input_window_120_output_window_551.html  forecasting_using_RNNLSTM_combination_input_window_180_output_window_491.html  forecasting_using_RNNLSTM_combination_input_window_240_output_window_431.html  forecasting_using_RNNLSTM_combination_input_window_300_output_window_371.html  forecasting_using_RNNLSTM_combination_input_window_60_output_window_611.html
StatisticalResults/: rnn_lstm_evaluation_results.csv  sarima_evaluation_results.csv  xgb_evaluation_results.csv
data/: processed_weekly.csv
data/processed/: daily_data.csv  monthly_data.csv  weekly_data.csv
data/raw/: dft-road-selected_feature_raw_data.csv_weekly.csv
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1-data_preprocessing_pipeline.ipynb  2-Accident_forecasting_using_RNNLSTM_model-using_tensorflow.ipynb  2-Accident_forecasting_using_RNNLSTM_model.ipynb  3-Accident_forecasting_using_ARIMA_model.ipynb  4-Accident_forecasting_using_RNNLSTM_model-using_tensorflow.ipynb  4-Accident_forecasting_using_RNNLSTM_model.ipynb  4-Accident_forecasting_using_XGB_model.ipynb  RNN_LSTM_tensorflow.ipynb  Untitled.ipynb  main.ipynb
notebooks/darts_logs/RNNLSTMForecasting/: _model.pth.tar
notebooks/darts_logs/model_LSTM_hidden_dim_20_n_rnn_layers_20_dropout_0_batch_size_16_n_epochs_100_learning_rate_0.0001_log_tensorboard_True_training_length_60_input_chunk_length_60/: _model.pth.tar
notebooks/darts_logs/model_LSTM_hidden_dim_20_n_rnn_layers_20_dropout_0_batch_size_16_n_epochs_1_learning_rate_0.0001_log_tensorboard_True_training_length_60_input_chunk_length_60/: _model.pth.tar
pkl/: trained_model_filenames.txt
pkl_tensorflow/: units_64_batch_size_32_epochs_100_output_steps_10.keras
pkl_tensorflow/units_128_batch_size_32_epochs_100_output_steps_10/: fingerprint.pb  keras_metadata.pb  saved_model.pb
pkl_tensorflow/units_128_batch_size_32_epochs_100_output_steps_10/variables/: variables.data-00000-of-00001  variables.index
pkl_tensorflow/units_64_batch_size_32_epochs_100_output_steps_10/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/features/: preprocessing.py
src/visualization/: visualize.py
(+23 files in other folders)
