[tool.poetry]
name = "iffishells"
version = "0.1.0"
description = ""
authors = ["iffishells"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = {path = "darts_Download/numpy-1.26.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pandas = {path = "darts_Download/pandas-2.1.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
jupyterlab = "^4.1.5"
darts = {path = "darts_Download/darts-0.27.1-py3-none-any.whl"}
holidays = {path = "darts_Download/holidays-0.39-py3-none-any.whl"}
joblib = {path = "darts_Download/joblib-1.3.2-py3-none-any.whl"}
matplotlib = {path = "darts_Download/matplotlib-3.8.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
nfoursid = {path = "darts_Download/nfoursid-1.0.1-py3-none-any.whl"}
nvidia-cublas-cu12 = {path = "darts_Download/nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl"}
nvidia-cuda-cupti-cu12 = {path = "darts_Download/nvidia_cuda_cupti_cu12-12.1.105-py3-none-manylinux1_x86_64.whl"}
nvidia-cuda-nvrtc-cu12 = {path = "darts_Download/nvidia_cuda_nvrtc_cu12-12.1.105-py3-none-manylinux1_x86_64.whl"}
nvidia-cuda-runtime-cu12 = {path = "darts_Download/nvidia_cuda_runtime_cu12-12.1.105-py3-none-manylinux1_x86_64.whl"}
nvidia-cudnn-cu12 = {path = "darts_Download/nvidia_cudnn_cu12-8.9.2.26-py3-none-manylinux1_x86_64.whl"}
nvidia-cufft-cu12 = {path = "darts_Download/nvidia_cufft_cu12-11.0.2.54-py3-none-manylinux1_x86_64.whl"}
nvidia-curand-cu12 = {path = "darts_Download/nvidia_curand_cu12-10.3.2.106-py3-none-manylinux1_x86_64.whl"}
nvidia-cusolver-cu12 = {path = "darts_Download/nvidia_cusolver_cu12-11.4.5.107-py3-none-manylinux1_x86_64.whl"}
nvidia-cusparse-cu12 = {path = "darts_Download/nvidia_cusparse_cu12-12.1.0.106-py3-none-manylinux1_x86_64.whl"}
nvidia-nccl-cu12 = {path = "darts_Download/nvidia_nccl_cu12-2.18.1-py3-none-manylinux1_x86_64.whl"}
nvidia-nvtx-cu12 = {path = "darts_Download/nvidia_nvtx_cu12-12.1.105-py3-none-manylinux1_x86_64.whl"}
pmdarima = {path = "darts_Download/pmdarima-2.0.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl"}
pytorch-lightning = {path = "darts_Download/pytorch_lightning-2.1.3-py3-none-any.whl"}
requests = {path = "darts_Download/requests-2.31.0-py3-none-any.whl"}
scikit-learn = {path = "darts_Download/scikit_learn-1.3.2-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
scipy = {path = "darts_Download/scipy-1.11.4-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
shap = {path = "darts_Download/shap-0.44.0-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
slicer = {path = "darts_Download/slicer-0.0.7-py3-none-any.whl"}
statsforecast = {path = "darts_Download/statsforecast-1.7.0-py3-none-any.whl"}
statsmodels = {path = "darts_Download/statsmodels-0.14.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
tbats = {path = "darts_Download/tbats-1.1.3-py3-none-any.whl"}
tensorboardx = {path = "darts_Download/tensorboardX-2.6.2.2-py2.py3-none-any.whl"}
torch = {path = "darts_Download/torch-2.1.2-cp39-cp39-manylinux1_x86_64.whl"}
tqdm = {path = "darts_Download/tqdm-4.66.1-py3-none-any.whl"}
triton = {path = "darts_Download/triton-2.1.0-0-cp39-cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.whl"}
typing-extensions = {path = "darts_Download/typing_extensions-4.9.0-py3-none-any.whl"}
xarray = {path = "darts_Download/xarray-2023.12.0-py3-none-any.whl"}
xgboost = {path = "darts_Download/xgboost-2.0.3-py3-none-manylinux2014_x86_64.whl"}
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
